// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Changeset 1`] = `
"POST host/service/$batch HTTP/1.1
OData-Version: 4.0
Content-Type: multipart/mixed; boundary=batch_36522ad7-fc75-4b56-8c71-56071383e77b
Accept: multipart/mixed

--batch_36522ad7-fc75-4b56-8c71-56071383e77b
Content-Type: application/http
Content-Transfer-Encoding: binary

GET Customers('ALFKI') HTTP/1.1


--batch_36522ad7-fc75-4b56-8c71-56071383e77b
Content-Type: multipart/mixed; boundary=changeset_77162fcd-b8da-41ac-a9f8-9357efbbd

--changeset_77162fcd-b8da-41ac-a9f8-9357efbbd
Content-ID: 1
Content-Type: application/http
Content-Transfer-Encoding: binary

POST Customers HTTP/1.1
Content-Type: application/atom+xml;type=entry

<AtomPub representation of a new Customer>
--changeset_77162fcd-b8da-41ac-a9f8-9357efbbd
Content-ID: 2
Content-Type: application/http
Content-Transfer-Encoding: binary

PATCH Customers('ALFKI') HTTP/1.1
Content-Type: application/json

<JSON representation of Customer ALFKI>
--changeset_77162fcd-b8da-41ac-a9f8-9357efbbd--
--batch_36522ad7-fc75-4b56-8c71-56071383e77b
Content-Type: application/http
Content-Transfer-Encoding: binary

GET Products HTTP/1.1


--batch_36522ad7-fc75-4b56-8c71-56071383e77b--"
`;

exports[`Construct correct batch URL 1`] = `
"POST host/service/$batch HTTP/1.1
OData-Version: 4.0
Content-Type: multipart/mixed; boundary=batch_36522ad7-fc75-4b56-8c71-56071383e77b
Accept: multipart/mixed

--batch_36522ad7-fc75-4b56-8c71-56071383e77b
Content-Type: application/http
Content-Transfer-Encoding: binary

GET Customers HTTP/1.1


--batch_36522ad7-fc75-4b56-8c71-56071383e77b--"
`;

exports[`GET and POST 1`] = `
"POST host/service/$batch HTTP/1.1
OData-Version: 4.0
Content-Type: multipart/mixed; boundary=batch_36522ad7-fc75-4b56-8c71-56071383e77b
Accept: multipart/mixed

--batch_36522ad7-fc75-4b56-8c71-56071383e77b
Content-Type: application/http
Content-Transfer-Encoding: binary

GET Customers('ALFKI') HTTP/1.1


--batch_36522ad7-fc75-4b56-8c71-56071383e77b
Content-Type: application/http
Content-Transfer-Encoding: binary

POST Customers HTTP/1.1
Content-Type: application/atom+xml;type=entry

<AtomPub representation of a new Customer>
--batch_36522ad7-fc75-4b56-8c71-56071383e77b--"
`;

exports[`GET only 1`] = `
"POST host/service/$batch HTTP/1.1
OData-Version: 4.0
Content-Type: multipart/mixed; boundary=batch_36522ad7-fc75-4b56-8c71-56071383e77b
Accept: multipart/mixed

--batch_36522ad7-fc75-4b56-8c71-56071383e77b
Content-Type: application/http
Content-Transfer-Encoding: binary

GET Customers('ALFKI') HTTP/1.1


--batch_36522ad7-fc75-4b56-8c71-56071383e77b
Content-Type: application/http
Content-Transfer-Encoding: binary

GET Products HTTP/1.1


--batch_36522ad7-fc75-4b56-8c71-56071383e77b--"
`;
